Working on contrast issues

--- a/style.css
+++ b/style.css
@@ -739,6 +739,10 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.black {
+    color: #212121 !important;
+}
+
 .portfolio-thumb {
     margin-bottom: 24px;
 }
@@ -780,12 +784,12 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #212121 !important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
-    color: #FFFFFF!important;
+    background: #c27956 !important;
+    color: #212121 !important;
 }
 
 .ltc-white {
